# wagtail-makeup

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml  package.py  release.yml  tests.yml
docs/: CONTRIBUTING.md  RELEASE.md
wagtailmakeup/: api.py  settings.py
wagtailmakeup/management/commands/: make_up.py
wagtailmakeup/tests/: settings.py  tests.py  urls.py
