[metadata]
description-file = README.md
author = Kevin Howbrook
description = Replace all your images with files from unsplash
version = 1.0.0
url = https://github.com/kevinhowbrook/wagtail-makeup
keywords =
  wagtail
  django
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
include_package_data = true
packages = find:
install_requires =
    Django>=3.2, <4.2
    wagtail>=4.1, <5.0
    python-unsplash>=1.1.0, <1.2
