[metadata]
description-file = README.md
author = Kevin Howbrook
description = Replace all your images with files from unsplash
version = 1.0.0
url = https://github.com/kevinhowbrook/wagtail-makeup
keywords =
  wagtail
  django
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.9
setup_requires =
  setuptools >= 70.0.0
  pip >= 24.0
include_package_data = true
packages = find:
install_requires =
    Django>=4.2
    wagtail>=5.2
    python-unsplash>=1.2.5
